eks-blueprint/k8s-files/network-policy/development/default-deny-pod.yaml
# Deploy app-pod and service
apiVersion: v1
kind: Pod
metadata:
  name: app-pod
  namespace: development
  labels:
    pod: app-pod
spec:
  containers:
  - name: myapp
    image: nginx
    resources:
      limits:
        cpu: 100m
        memory: 100Mi
      requests:
        cpu: 100m
        memory: 100Mi
    ports:
    - containerPort: 80
      name:  http

---
apiVersion: v1
kind: Service
metadata:
  name: app-pod
  namespace: development
spec:
  selector:
    app: app-pod
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 80

---
# Deploy db-pod and service

# Deploy app-pod
apiVersion: v1
kind: Pod
metadata:
  name: db-pod
  namespace: development
  labels:
    pod: db-pod
spec:
  containers:
  - name: myapp
    image: nginx
    resources:
      limits:
        cpu: 100m
        memory: 100Mi
      requests:
        cpu: 100m
        memory: 100Mi
    ports:
    - containerPort: 80
      name:  http

---
apiVersion: v1
kind: Service
metadata:
  name: db-pod
  namespace: development
spec:
  selector:
    app: db-pod
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 80
