eks-blueprint/k8s-files/network-policy/development/egress-ingress.yaml
# Apply default policy to cblock all connection between pods before finegrained policy

# egress from app-pod to db-pod
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-to-db-pod
  namespace: development
spec:
  podSelector:
    matchLabels:
      pod: app-pod
  policyTypes:
    - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            pod: db-pod
<<<<<<< HEAD
_
=======
      - namespaceSelector:
          matchLabels:
            env: prod
>>>>>>> 86dfff0390cdc6aa02861ed07646c536edd36375
            

---

# ingress on db-pod allowing traffic from app-pod

# egress from app-pod to db-pod
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-from-app-pod
  namespace: development
spec:
  podSelector:
    matchLabels:
      pod: db-pod
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            pod: app-pod
